# nabled

./: .gitignore  .justfile  AGENTS.md  CHANGELOG.md  Cargo.toml  DOCUMENTATION.md  LICENSE  LICENSE-APACHE  NextFunctions.md  README.md  architecture.md  cliff.toml  clippy.toml
.github/workflows/: ci.yml  pr.yml  release.yml  security.yml
benches/: qr_benchmarks.rs  svd_benchmarks.rs
crates/nabled/: Cargo.toml
crates/nabled-core/: Cargo.toml
crates/nabled-core/src/: errors.rs  lib.rs  validation.rs
crates/nabled-linalg/: Cargo.toml
crates/nabled-linalg/src/: cholesky.rs  eigen.rs  internal.rs  lib.rs  lu.rs  matrix_functions.rs  orthogonalization.rs  polar.rs  qr.rs  schur.rs  sparse.rs  svd.rs  sylvester.rs  triangular.rs  vector.rs
crates/nabled-linalg/tests/: into_nabled_error.rs
crates/nabled-ml/: Cargo.toml
crates/nabled-ml/src/: iterative.rs  jacobian.rs  lib.rs  optimization.rs  pca.rs  regression.rs  stats.rs
crates/nabled-ml/tests/: into_nabled_error.rs
crates/nabled/benches/: cholesky_benchmarks.rs  eigen_benchmarks.rs  lu_benchmarks.rs  matrix_functions_benchmarks.rs  optimization_benchmarks.rs  qr_benchmarks.rs  schur_benchmarks.rs  sparse_benchmarks.rs  svd_benchmarks.rs  sylvester_benchmarks.rs  triangular_benchmarks.rs  vector_benchmarks.rs
crates/nabled/examples/: cholesky_example.rs  complex_jacobian_example.rs  jacobian_example.rs  lu_example.rs  matrix_functions_example.rs  pca_example.rs  qr_example.rs  regression_example.rs  svd_example.rs
crates/nabled/src/: lib.rs
crates/nabled/tests/: backend_capability_matrix.rs  integration.rs
docs/: BACKEND_CAPABILITY_MATRIX.md  BENCHMARK_SPEC.md  CAPABILITY_MATRIX.md  DECISIONS.md  DOCUMENTATION.md  EXECUTION_TRACKER.md  PRODUCTION_READY.md  README.md  ROADMAP.md  STATUS.md  architecture.md
examples/: arrow_full_example.rs  arrow_qr_example.rs  arrow_svd_example.rs  cholesky_example.rs  complex_jacobian_example.rs  jacobian_example.rs  lu_example.rs  matrix_functions_example.rs  pca_example.rs  qr_example.rs  regression_example.rs  svd_example.rs
src/: cholesky.rs  eigen.rs  interop.rs  iterative.rs  jacobian.rs  lib.rs  lu.rs  matrix_functions.rs  orthogonalization.rs  pca.rs  polar.rs  qr.rs  regression.rs  schur.rs  stats.rs  svd.rs  sylvester.rs  triangular.rs  utils.rs
src/arrow/: conversions.rs  error.rs  jacobian.rs  matrix_functions.rs  mod.rs  qr.rs  svd.rs
src/backend/: cholesky.rs  eigen.rs  lu.rs  matrix_functions.rs  mod.rs  pca.rs  polar.rs  qr.rs  regression.rs  schur.rs  svd.rs  sylvester.rs  triangular.rs
tests/: arrow_integration_tests.rs  backend_capability_matrix.rs  integration.rs  integration_tests.rs
