[package]
name = "rust-linalg"
version = "0.3.0"
edition = "2021"
description = "A linear algebra library written in Rust. SVD, QR, LU, Cholesky, eigen, PCA, regression, matrix functions, Jacobians, and more."
authors = ["Niklaus Parcell <nik.parcell@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/NiklausParcell/rust-linearalgebra-better"
homepage = "https://github.com/NiklausParcell/rust-linearalgebra-better"
documentation = "https://docs.rs/rust-linalg"
readme = "README.md"
keywords = ["linear-algebra", "svd", "nalgebra", "ndarray", "rust", "mathematics", "decomposition", "pca", "regression"]
categories = ["mathematics", "science", "algorithms"]
publish = false  # change when ready

[features]
default = []

[dependencies]
nalgebra = { version = "0.32", features = ["serde-serialize"] }
ndarray = { version = "0.15", features = ["serde"] }
ndarray-rand = "0.14"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
num-traits = "0.2"
num-complex = "0.4"
approx = "0.5"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "svd_benchmarks"
harness = false
