[workspace]
members = [
    "crates/nabled",
    "crates/nabled-core",
    "crates/nabled-linalg",
    "crates/nabled-ml",
]
default-members = [
    "crates/nabled",
    "crates/nabled-core",
    "crates/nabled-linalg",
    "crates/nabled-ml",
]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Niklaus Parcell <nik.parcell@gmail.com>", "George Lee Patterson <patterson.george@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/MontOpsInc/nabled"
homepage = "https://github.com/MontOpsInc/nabled"
documentation = "https://docs.rs/nabled"
publish = false

[workspace.dependencies]
nabled = { path = "crates/nabled" }
nabled-core = { path = "crates/nabled-core" }
nabled-linalg = { path = "crates/nabled-linalg" }
nabled-ml = { path = "crates/nabled-ml" }

approx = "0.5"
criterion = "0.8"
faer = { version = "0.24", default-features = false, features = ["std", "linalg"] }
ndarray = { version = "0.17", features = ["serde"] }
ndarray-linalg = { version = "0.18", default-features = false, features = ["openblas-system"] }
num-complex = "0.4"
num-traits = "0.2"
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
large_futures = "warn"
clone_on_ref_ptr = "warn"
must_use_candidate = "allow"

[workspace.lints.rust]
unused_imports = "deny"
elided_lifetimes_in_paths = "deny"
explicit_outlives_requirements = "warn"
let_underscore_drop = "warn"
missing_copy_implementations = "warn"
redundant_lifetimes = "warn"
rust_2024_incompatible_pat = "warn"
single_use_lifetimes = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_results = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[profile.release-with-debug]
inherits = "release"
debug = "full"

[profile.release-lto]
inherits = "release"
lto = true
opt-level = 3
codegen-units = 1

[profile.instruments]
inherits = "release"
debug = "full"
lto = "off"
codegen-units = 16
opt-level = 2
debug-assertions = false
incremental = false

[profile.release-with-debug.package."*"]
debug = "full"

[profile.instruments.package."*"]
debug = "full"

[profile.ci]
inherits = "dev"
incremental = false

[profile.ci.package."*"]
debug = false
debug-assertions = false
strip = "debuginfo"
incremental = false
