[package]
name = "nabled-linalg"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish.workspace = true
description = "Ndarray-native linear algebra algorithms for nabled"

[features]
default = []
lapack-kernels = ["dep:ndarray-linalg"]

[dependencies]
nabled-core.workspace = true
ndarray.workspace = true
num-complex.workspace = true
num-traits.workspace = true
serde.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
ndarray-linalg = { workspace = true, optional = true }

[lints]
workspace = true
