[package]
name = "nabled-linalg"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish.workspace = true
description = "Ndarray-native linear algebra algorithms for nabled"

[features]
default = []
blas = ["ndarray/blas"]
openblas-system = ["blas", "dep:ndarray-linalg", "ndarray-linalg/openblas-system"]

[dependencies]
nabled-core.workspace = true
ndarray.workspace = true
ndarray-linalg = { workspace = true, optional = true }
num-complex.workspace = true
num-traits.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
