[package]
name = "nabled"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish.workspace = true
description = "A linear algebra library written in Rust with an ndarray-first architecture."
readme = "../../README.md"
keywords = ["linear-algebra", "svd", "ndarray", "rust", "mathematics", "decomposition", "pca", "regression"]
categories = ["mathematics", "science", "algorithms"]

[features]
default = []
test-utils = []
blas = ["nabled-linalg/blas", "nabled-ml/blas"]
openblas-system = ["blas", "nabled-linalg/openblas-system", "nabled-ml/openblas-system"]

[dependencies]
nabled-core.workspace = true
nabled-linalg.workspace = true
nabled-ml.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
approx.workspace = true
criterion.workspace = true
faer.workspace = true
ndarray.workspace = true
rand.workspace = true

[lints]
workspace = true

[[bench]]
name = "svd_benchmarks"
harness = false

[[bench]]
name = "qr_benchmarks"
harness = false

[[bench]]
name = "triangular_benchmarks"
harness = false

[[bench]]
name = "matrix_functions_benchmarks"
harness = false
